--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -84,7 +84,7 @@ jobs:
           channel_id: ${{ env.SLACK_CHANNEL_ID }}
           payload_file: ".github/success_slack_message.json"
           replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: ${{ env.GITHUB_RUN_ID }}
+          replaceme_2: "https://github.com/iits-consulting/workadventure/actions/runs/${{ env.GITHUB_RUN_ID }}"
           replaceme_3: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
           replaceme_4: ${{ needs.lint.outputs.new_tag }}
       - name: Notify slack failed
