--- a/.github/workflows/any-branch-push.yml
+++ b/.github/workflows/any-branch-push.yml
@@ -75,39 +75,40 @@ jobs:
       - name: Setting branch name variable
         run: |
           echo "BRANCH_NAME=$(echo "${GITHUB_REF##*/}")" >> $GITHUB_ENV
-      - name: Notify slack success
-        if: ${{ success() }}
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-        uses: iits-consulting/slack-action@master
-        with:
-          channel_id: ${{ env.SLACK_CHANNEL_ID }}
-          payload_file: ".github/success_slack_message.json"
-          replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: "https://github.com/iits-consulting/workadventure/actions/runs/${{ env.GITHUB_RUN_ID }}"
-          replaceme_3: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
-          replaceme_4: ${{ needs.lint.outputs.new_tag }}
-      - name: Notify slack failed
-        if: ${{ failure() }}
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-        uses: iits-consulting/slack-action@master
-        with:
-          channel_id: ${{ env.SLACK_CHANNEL_ID }}
-          payload_file: ".github/failed_slack_message.json"
-          replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
-          replaceme_3: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
-          replaceme_4: ${{ needs.lint.outputs.new_tag }}
-      - name: Notify slack aborted
-        if: ${{ cancelled() }}
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-        uses: iits-consulting/slack-action@master
-        with:
-          channel_id: ${{ env.SLACK_CHANNEL_ID }}
-          payload_file: ".github/aborted_slack_message.json"
-          replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
-          replaceme_3: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
-          replaceme_4: ${{ needs.lint.outputs.new_tag }}
+      - run: echo "${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}/actions/runs/${{ env.GITHUB_RUN_ID }}"
+#      - name: Notify slack success
+#        if: ${{ success() }}
+#        env:
+#          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+#        uses: iits-consulting/slack-action@master
+#        with:
+#          channel_id: ${{ env.SLACK_CHANNEL_ID }}
+#          payload_file: ".github/success_slack_message.json"
+#          replaceme_1: ${{ github.event.repository.name }}
+#          replaceme_2: "https://github.com/iits-consulting/workadventure/actions/runs/${{ env.GITHUB_RUN_ID }}"
+#          replaceme_3: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
+#          replaceme_4: ${{ needs.lint.outputs.new_tag }}
+#      - name: Notify slack failed
+#        if: ${{ failure() }}
+#        env:
+#          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+#        uses: iits-consulting/slack-action@master
+#        with:
+#          channel_id: ${{ env.SLACK_CHANNEL_ID }}
+#          payload_file: ".github/failed_slack_message.json"
+#          replaceme_1: ${{ github.event.repository.name }}
+#          replaceme_2: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
+#          replaceme_3: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
+#          replaceme_4: ${{ needs.lint.outputs.new_tag }}
+#      - name: Notify slack aborted
+#        if: ${{ cancelled() }}
+#        env:
+#          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+#        uses: iits-consulting/slack-action@master
+#        with:
+#          channel_id: ${{ env.SLACK_CHANNEL_ID }}
+#          payload_file: ".github/aborted_slack_message.json"
+#          replaceme_1: ${{ github.event.repository.name }}
+#          replaceme_2: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
+#          replaceme_3: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
+#          replaceme_4: ${{ needs.lint.outputs.new_tag }}
