--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -129,8 +129,8 @@ jobs:
           channel_id: ${{ env.SLACK_CHANNEL_ID }}
           payload_file: ".github/success_slack_message.json"
           replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
-          replaceme_3: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
+          replaceme_2: "${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}"
+          replaceme_3: "${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}"
           replaceme_4: ${{ needs.prepare-stable.outputs.new_tag }}
       - name: Notify slack failed
         if: ${{ failure() }}
@@ -141,8 +141,8 @@ jobs:
           channel_id: ${{ env.SLACK_CHANNEL_ID }}
           payload_file: ".github/failed_slack_message.json"
           replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
-          replaceme_3: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
+          replaceme_2: "${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}"
+          replaceme_3: "${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}"
           replaceme_4: ${{ needs.prepare-stable.outputs.new_tag }}
       - name: Notify slack aborted
         if: ${{ cancelled() }}
@@ -153,6 +153,6 @@ jobs:
           channel_id: ${{ env.SLACK_CHANNEL_ID }}
           payload_file: ".github/aborted_slack_message.json"
           replaceme_1: ${{ github.event.repository.name }}
-          replaceme_2: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY
-          replaceme_3: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
+          replaceme_2: "${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}"
+          replaceme_3: "${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}"
           replaceme_4: ${{ needs.prepare-stable.outputs.new_tag }}
